# chat-with-notion

./: .gitignore  LICENSE  pyproject.toml
src/chat_with_notion/: cli.py
